Bug 877908 - Precludes also directives after "use asm". r=luke